jvm笔记补充,其他笔记调整