@@ -1,5 +1,7 @@
 - <mark> [官方文档](https://docs.oracle.com/javase/8/docs/technotes/tools/windows/index.html) </mark>
 
+至少完美掌握两三款。推荐先搞定Visual VM,Arthas。然后再看看JProfiler和eclipse MAT
+
 # 1. 性能监控与调优概述
 
 ## 1.1. 调优背景
@@ -108,7 +110,7 @@
     | 网络传输 2Kb 数据                   | 1 微秒   |
 
 - 垃圾回收层面
-  - 暂停时间：**执行垃圾收集时，程序的工作线程被暂停的时间
+  - 暂停时间： **执行垃圾收集时，程序的工作线程被暂停的时间**
   - 参数： `-XX:MaxGCPauseMills`
 
 ### 1.4.2. 吞吐量
@@ -218,7 +220,7 @@
 
     - 执行：
 
-      ```shell
+      ```bash
       jps -m > a.txt
       ```
 
@@ -233,7 +235,7 @@
 
     - 执行：
 
-      ```shell
+      ```bash
       jps -v > b.txt
       ```
 
@@ -259,7 +261,7 @@
   - -t 参数：添加timestamp信息
   - -h 参数： 输出行信息
 
-  ```shell
+  ```bash
   jstat -<option> [-t] [-h<lines>] <vmid> [<interval> [<count>]]
   ```
   ```bash
@@ -408,7 +410,7 @@
 
 #### 2.4.2.1. 基本语法与参数
 
-  ```shell
+  ```bash
   jinfo [option] pid  # pid：进程的ID，必须加上
   ```
 
@@ -454,7 +456,7 @@
 
 - 注意：并非所有的参数都支持动态修改。参数只有被标记为manageable的flag可以实时修改。其实，这个修改能力是极其有限的。
 
-  ```shell
+  ```bash
   # 可以查看被标记为manageable的参数
   java -XX:+PrintFlagsFinal -version | grep manageable
   ```
@@ -465,7 +467,7 @@
 
 ### 2.4.3. 拓展:查看所有jvm参数与值
 
-```shell
+```bash
   # 查看所有JVM参数启动的初始值
   java -XX:+PrintFlagsInitial
   # 查看所有JVM参数的最终值
@@ -488,7 +490,7 @@
 
 - 基本语法
 
-  ```shell
+  ```bash
   jmap [option] <pid>
   jmap [option] <executable <core>
   jmap [option] [server_id@]<remote server IP or hostname>
@@ -573,7 +575,7 @@
 
 - 手动的方式
 
-  ```shell
+  ```bash
   # format=b 是为了jmap生成的文件能和hprof文件匹配起来
 
   # 文件会越来越大
@@ -592,13 +594,13 @@
   - 当程序发生OOM退出系统时，一些瞬时信息都随着程序的终止而消失，而OOM问题往往比较困难或者耗时。
   - 此时若能在OOM时，自动导出dump文件就显得非常迫切
 
-  ```shell
+  ```bash
   # 当程序发生OOM时，导出应用程序的当前堆快照
   -XX:+HeapDumpOnOutOfMemoryError
   # 可以指定堆快照的保存位置
   -XX:HeapDumpPath=<filename.hprof>
   ```
-  ```shell
+  ```bash
   # 比如：
   -Xms60m -Xmx60m -XX:SurvivorRatio=8 -XX:+HeapDumpOnOutOfMemoryError -XX:HeapDumpPath=d:\heap\oom.hprof
   ```
@@ -744,7 +746,7 @@ All boolean options default to "true"
 
 - jstack远程管理的话，需要在远程程序的启动参数中增加：
 
-  ```shell
+  ```bash
   -Djava.rmi.server.hostname=......
   -Dcom.sun.management.jmxremote
   -Dcom.sun.management.jmxremote.port=8888
@@ -883,7 +885,7 @@ public class ThreadDeadLock {
 
 - 示例
 
-  ```shell
+  ```bash
   # 使用如下命令可以替换jps，即列出所有的JVM进程，加不加-l运行结果一样
   jcmd -l
   # 针对指定的进程，列出支持的所有命令
@@ -2170,6 +2172,29 @@ class Picture {
 
 #### 3.5.2.2. 数据采集方式
 
+- 打开Jprofile后需要选择使用的数据采集方式 
+
+  ![jvm3-85.png](./image/jvm3-85.png)
+
+  ![jvm3-86.png](./image/jvm3-86.png)
+
+- JProfiler数据采集方式分为两种：Sampling（样本采集）和Instrumentation（重构模式）
+  - Instrumentation：
+    - 说明：
+      - 这是JProfiler全功能模式
+      - 在class加载之前，JProfiler把相关功能代码写入到需要分析的class的bytecode中，对正在运行的jvm有一定的影响。
+    - 优点：功能强大。在此设置中，调用堆栈信息是准确的。
+    - 缺点：若要分析的class较多，则对应的性能影响比较大，CPU开销可能很高（取决于Filter的控制）。因此使用此模式一般配合Filter使用，只对特定的类或包进行分析。
+  - Sampling：
+    - 说明：
+      - 类似于样本统计
+      - 每隔一定时间（5ms）将每个线程栈中方法的信息统计出来。
+    - 优点：对CPU的开销非常低，对应用影响小（即使你不配置任何Filter）
+    - 缺点：一些数据/特性不能提供（例如：方法的调用次数、执行时间）
+
+  > 注：JProfilter本身没有指出数据的采集类型，这里的采集类型是针对方法调用的采集类型。 
+  > 因为JProfiler的绝大数核心功能都依赖方法调用采集的数据，所以可以直接认为是JProfiler的数据采集类型。
+
 #### 3.5.2.3. 遥感检测Telemetries
 
 #### 3.5.2.4. 内存视图Live Memory
@@ -2253,21 +2278,975 @@ class Bean {
 
 ### 3.6.1. 基本概述
 
+- 背景：
+  - jvisualvm和JProfiler都必须在服务端项目进程中配置相关监控参数
+  - 然后工具通过远程连接到项目进程，获取相关数据。
+  - 这样就带来一些不便，比如线上环境的网络是隔离的，本地的监控工具根本连不上线上环境
+  - 并且类似于Jprofiler这样的商业工具，是需要付费的。
+
+- 概述:`Arthas` 是Alibaba开源的Java诊断工具，可以解决一下问题：
+  - 这个类从哪个 jar 包加载的？为什么会报各种类相关的 Exception？
+  - 我改的代码为什么没有执行到？难道是我没 commit？分支搞错了？
+  - 遇到问题无法在线上 debug，难道只能通过加日志再重新发布吗？
+  - 线上遇到某个用户的数据处理有问题，但线上同样无法 debug，线下无法重现！
+  - 是否有一个全局视角来查看系统的运行状况？
+  - 有什么办法可以监控到JVM的实时运行状态？
+  - 怎么快速定位应用的热点，生成火焰图？
+
+  `Arthas`支持JDK 6+，支持Linux/Mac/Windows，采用命令行交互模式，同时提供丰富的 `Tab` 自动补全功能，进一步方便进行问题的定位和诊断。
+
+- 依赖
+  - greys-anatomy： **Arthas 代码基于 Greys 二次开发而来** 
+  - termd： **Arthas 的命令行基于 termd 开发** ，是一款优秀的命令行程序开发框架
+  - crash： **Arthas 的文本渲染功能基于 crash 中的文本渲染功能开发**，可以从这里看到源码
+  - cli： **Arthas 的命令行界面** 基于 vert.x 提供的 cli 库进行开发
+  - complier Arthas 里的 **内存编辑器代码** 来源
+  - Apache Commons Net Arthas 里的 Telnet Client 代码来源
+  - JavaAgent：运行在 main 方法之前的拦截器，它内定的方法名叫 permain，也就是说先执行 permain 然后再执行 main 方法
+  - ASM：一个通用的 Java 字节码操作和分析框架。他可以用于修改现有的类或直接以二进制形式动态生成类。ASM 提供了一些常见的字节码转换和分析算法，可以从他们构建定制的复杂转换和代码分析工具。ASM 提供了与其他 Java 字节码框架类似的功能，但是主要关注性能。因为它被设计和实现得尽可能小和块，所以非常适合在动态系统中使用（当然也可以以静态方式使用，例如在编译器中）。
+
+- 官方使用文档：[网址](https://arthas.aliyun.com/zh-cn)
+
+  ![jvm3-87.png](./image/jvm3-87.png)
+
 ### 3.6.2. 安装与使用
+
+> **安装**
+
+- **安装方式一**：可以直接在Linux上通过命令下载
+
+  - Github下载
+
+    ```bash
+    wget https://alibaba.github.io/arthas/arthas-boot.jar
+    ```
+
+  - Gitee下载
+
+    ```bash
+    wget https://arthas.gitee.io/arthas-boot.jar
+    ```
+
+- **安装方式二**
+
+  也可以在浏览器中直接访问 [网址](https://alibaba.github.io/arthas/arthas-boot.jar)，等到下载成功后，上传到Linux服务器上。
+
+> **卸载**
+
+- 在Linux/Unix/mac平台，删除下面文件：
+
+  ```bash
+  rm -rf ~/.arthas/
+  rm -rf ~/logs/arthas
+  ```
+
+- Windows平台直接删除user home下面的.arthas和logs/arthas目录
+
+> **启动**
+
+```bash
+  # 方式一：检测当前服务器上的Java进程，并将进程列表展示出来，用户输入对应的编号进行选择，然后回车
+  java -jar arthas-boot.jar
+  # 方式二：运行时选择Java进程PID
+  java -jar arthas-boot.jar [PID]
+```
+
+![jvm3-88.png](./image/jvm3-88.png)
+
+> **web console**
+
+- 除了在命令行查看外，Arthas目前还支持Web Console
+- 在成功启动连接进程之后就已经启动
+- 可以直接访问：`http://127.0.0.1:8563/` 访问，页面上的操作模式和控制台完全一样。
+
+![jvm3-89.png](./image/jvm3-89.png)
+
+> **其他**
+
+```bash
+  # 查看日志
+  cat ~/logs/arthas/arthas.lg
+  # 查看帮助
+  java -jar arthas-boot.jar -h
+  # 退出
+  quit\exit  # 退出当前客户端
+  stop\shutdown  # 关闭arthas服务端，并退出所有客户端
+```
 
 ### 3.6.3. 相关诊断命令
 
+- [命令帮助网址](https://arthas.gitee.io/advanced-use.html)
+
+#### 3.6.3.1. 基础指令
+
+- help:查看帮助命令信息
+- cat:打印文件内容，和linux里的 cat 命令类似
+- echo:打印参数，和linux里的 echo 命令类似
+- grep:匹配查找，和linux里的 grep 命令类似
+- tee:复制标准输入到标准输出和指定文件，和linux里的 tee 命令类似
+- pwd:返回当前的工作目录，，和linux里的 pwd 命令类似
+- cls:清空当前屏幕区域
+- session:查看当前会话的信息
+- reset:重置增强类，将被Arthas增强过的类全部还原，Arthas服务端关闭时会重置所有增强过的类
+- version:输出当前目标Java进程所加载的Arthas版本号
+- history:打印历史命令
+- quit:退出当前Arthas客户端，其他Arthas客户端不受影响
+- stop:关闭Arthas服务端，所有Arthas客户端不受影响
+- keymap:Arthas快捷键列表及自定义快捷键
+
+#### 3.6.3.2. jvm相关
+
+- [dashboard](https://arthas.gitee.io/dashboard.html)——当前系统的实时数据面板
+- [thread](https://arthas.gitee.io/thread.html)——查看当前 JVM 的线程堆栈信息
+- [jvm](https://arthas.gitee.io/jvm.html)——查看当前 JVM 的信息
+- [sysprop](https://arthas.gitee.io/sysprop.html)——查看和修改JVM的系统属性
+- [sysenv](https://arthas.gitee.io/sysenv.html)——查看JVM的环境变量
+- [vmoption](https://arthas.gitee.io/vmoption.html)——查看和修改JVM里诊断相关的option
+- [perfcounter](https://arthas.gitee.io/perfcounter.html)——查看当前 JVM 的Perf Counter信息
+- [logger](https://arthas.gitee.io/logger.html)——查看和修改logger
+- [getstatic](https://arthas.gitee.io/getstatic.html)——查看类的静态属性
+- [ognl](https://arthas.gitee.io/ognl.html)——执行ognl表达式
+- [mbean](https://arthas.gitee.io/mbean.html)——查看 Mbean 的信息
+- [heapdump](https://arthas.gitee.io/heapdump.html)——dump java heap, 类似jmap命令的heap dump功能
+
+#### 3.6.3.3. class/classloader相关
+
+- [sc](https://arthas.gitee.io/sc.html)——查看JVM已加载的类信息
+- [sm](https://arthas.gitee.io/sm.html)——查看已加载类的方法信息
+- [jad](https://arthas.gitee.io/jad.html)——反编译指定已加载类的源码
+- [mc](https://arthas.gitee.io/mc.html)——内存编译器，内存编译`.java`文件为`.class`文件
+- [retransform](https://arthas.gitee.io/retransform.html)——加载外部的`.class`文件，retransform到JVM里
+- [redefine](https://arthas.gitee.io/redefine.html)——加载外部的`.class`文件，redefine到JVM里
+- [dump](https://arthas.gitee.io/dump.html)——dump 已加载类的 byte code 到特定目录
+- [classloader](https://arthas.gitee.io/classloader.html)——查看classloader的继承树，urls，类加载信息，使用classloader去getResource
+
+#### 3.6.3.4. monitor/watch/trace相关
+
+请注意，这些命令，都通过字节码增强技术来实现的，会在指定类的方法中插入一些切面来实现数据统计和观测，
+因此在线上、预发使用时，请尽量明确需要观测的类、方法以及条件，诊断结束要执行 `stop` 或将增强过的类执行 `reset` 命令。
+
+- [monitor](https://arthas.gitee.io/monitor.html)——方法执行监控
+- [watch](https://arthas.gitee.io/watch.html)——方法执行数据观测
+- [trace](https://arthas.gitee.io/trace.html)——方法内部调用路径，并输出方法路径上的每个节点上耗时
+- [stack](https://arthas.gitee.io/stack.html)——输出当前方法被调用的调用路径
+- [tt](https://arthas.gitee.io/tt.html)——方法执行数据的时空隧道，记录下指定方法每次调用的入参和返回信息，并能对这些不同的时间下调用进行观测
+
+#### 3.6.3.5. 其他
+
+- profiler:使用async-profiler对应用采样，生成火焰图
+- options:查看或设置Arthas全局开关
+- auth:鉴权
+
 ## 3.7. Java Mission Control
+
+### 3.7.1. 历史
+
+- 在Oracle收购Sun之前，Oracle的Jrocket虚拟机提供了一款叫做JRocket Mission Control的虚拟机诊断工具。
+- 在Oracle收购Sun之后，Oracle公司同时拥有了Sun Hotspot和JRocket两款虚拟机。根据Oracle对于Java的战略，在今后的发展中，会将JRocket的优秀特性移植到Hotspot上，其中，一个重要的改进就是在Sun的JDK中加入了JRocket的支持。
+- 在Oracle JDK 7u40之后，Mission Control这款工具已经绑定在Oracle JDK中发布。
+- 自Java 11开始，本节介绍的JFR已经开源。但是之前的Java版本，JFR属于Commercial Feature，需要通过Java虚拟机参数`-XX:+UnlockCommercialFeatures`开启。
+- 如果你有兴趣请可以查看OpenJDK的Mission Control项目：[网址](https://github.com/JDKMissionControl/jmc)
+
+### 3.7.2. 启动
+
+- Mission Control位于`%JAVA_HOME%/bin/jmc.exe`
+
+### 3.7.3. 概述
+
+- Java Mission Control（简称JMC），Java官方提供的性能强劲的工具。
+- 是一个用于对Java应用程序进行管理、监视、概要分析和故障排除的工具套件。
+- 它包含一个GUI客户端，以及众多用来收集Java虚拟机性能数据的插件
+  - 如JMX Console（能够访问用来存放虚拟机各个子系统运行数据的MXBeans）
+  - 以及虚拟机内置的高效profiling工具Java Flight Recorder（JFR）。
+- JMC的另一个优点就是：
+  - 采用取样，而不是传统的代码置入技术，对应用性能的影响非常非常小，
+  - 完全可以开着JMC来做压测（唯一影响可能是full gc多了）。
+
+### 3.7.4. 功能
+
+- 实时监控JVM运行时的状态
+
+  ![jvm3-90.png](./image/jvm3-90.png)
+
+### 3.7.5. Java Flight Recorder
+
+#### 3.7.5.1. 说明
+
+- Java Flight Recorder是JMC其中的一个组件。
+- Java Flight Recorder能够以 **极低的性能开销收集Java** 虚拟机的性能数据。
+ - JFR的性能开销小，在默认配置下平均低于1%
+ - 与其他工具相比，JFR能够直接访问虚拟机内的数据，并且不会影响虚拟机的优化
+ - 因此， **它非常适用于生产环境下满负荷运行下的Java程序**
+- JFR和JMC共同创建了一个完整的工具链
+  - JDK Mission Control可对Java Flight Recorder连续收集低水平和详细的运行时信息进行高效详细的分析。
+
+#### 3.7.5.2. 事件的类型
+
+- 当启用时，JFR将记录运行过程中发生的一系列事件。
+  - 其中包括Java层面的事件，如线程事件、锁事件
+  - 以及Java虚拟机内部的事件，如新建对象、垃圾回收和即时编译时间。
+
+- 按照事件发生时机以及持续时间来划分，JFR的事件供有四种类型，他们分别为以下四种。
+  - （1）瞬时事件（Instant Event）：用户关心的是它们发生与否，例如异常、线程启动事件。
+  - （2）持续事件（Duration Event）：用户关心的是它们的运行时间，例如垃圾回收事件。
+  - （3）计时事件（Timed Event）：是时长超出指定阈值的持续事件。
+  - （4）取样事件（Sample Event）：是周期性取样的事件。
+
+- 取样事件的其中一个常见例子便是方法抽样（Method Sampling）
+  - 即每隔一段时间统计各个线程的栈轨迹
+  - 如果在这些抽样取得的栈轨迹中存在一个反复出现的方法，那么就可以推断该方法是热点方法。
+
+#### 3.7.5.3. Java Flight Recorder取样分析
+
+- 要采用取样，必须先添加参数
+
+  ```bash
+  -XX:+UnlockCommercialFeatures
+  -XX:+FlightRecorder
+  ```
+
+  > 否则
+  > ![jvm3-91.png](./image/jvm3-91.png)
+
+#### 3.7.5.4. 启动方式
+
+- 方式1：图形界面方式：jmc自带的飞行记录仪界面
+
+- 方式2：在运行目标Java程序中添加`-XX:StartFlightRecording=参数`。
+  - 示例
+    - 下面命令中，JFR将会在Java虚拟机启动5s后（对应delay=5s）收集数据
+    - 持续20s（对应duration=20s）。
+    - 当收集完毕后，JFR会将收集到的数据保存至指定的文件中（对应filename=myrecording.jar）
+
+    ```bash
+    java -XX:StartFlightRecording=delay=5s,duration=20s,filename=myrecording.jar,settings=profile MyApp
+    ```
+
+  - 由于JFR将持续收集数据，如果不加以限制，那么JFR可能会填满硬盘的所有空间
+  - 因此，我们有必要对这种模式下所收集的数据进行限制。比如：
+
+    ```bash
+    # 满足一个条件就会停止
+    java -XX:StartFlightRecording=maxage=10m,maxsize=100m,name=SomeLabel MyApp
+    ```
+
+- 方式3：通过jcmd来让JFR开始收集数据、停止收集数据，或者保存所收集的数据，对应的子命令分别为
+
+  ```bash
+  JFR.start
+  JFR.stop
+  JFR.dump
+  ```
+
+  - 运行如下命令，可以让目标进程中的JFR开始收集数据
+
+    ```bash
+    jcmd <PID> JFR.start settings=profile maxage=10m maxsize=150m name=SomeLabel
+    ```
+
+  - 此时，可以通过如下命令来导出已经收集到的数据：
+
+    ```bash
+    jcmd <PID> JFR.dump name=SomeLabel filename=myrecording.jfr
+    ```
+
+  - 最后，可以通过下述命令关闭目标进程中的JFR：
+
+    ```bash
+    jcmd <PID> JFR.stop name=SomeLabel
+    ```
 
 ## 3.8. 其他工具
 
+![jvm3-92.png](./image/jvm3-92.png)
+
+### 3.8.1. 火焰图(重要)
+
+- 通过Arthas可以生成火焰图。
+- 在追求极致性能的场景下，了解你的程序运行过程中CPU在干什么很重要
+- 火焰图就是一种非常直观的展示CPU在程序整个生命周期过程中时间分配的工具。
+- 现代程序员对于火焰图不应该陌生，这个工具可以非常直观的显示出调用栈中的CPU消耗瓶颈。
+- 网上关于java火焰图的讲解大部分来自于Brendan Gregg的博客：[网址](http://www.brendangregg.com/flamegraphs.html)
+
+### 3.8.2. Tprofiler
+
+- 案例：
+  ```
+  使用JDK自身提供的工具进行JVM调优可以将TPS由2.5提升到了20（提升了7倍），并准确定位系统瓶颈。
+  系统瓶颈有：应用里静态对象太多、有大量的业务线程在频繁创建一些生命周期很长的临时对象，代码里有问题。
+  那么，如何在海量业务代码里边准确定位这些性能代码？这里使用了阿里开源工具TProfiler来定位这些性能代码，成功解决掉GC过于频繁的性能瓶颈，并最终在上次优化的基础上将TPS再提升4倍，即提升到100。
+  ```
+
+- TProfiler 配置部署、远程操作、日志阅读都不复杂，操作还是很简单的。
+  - 但是其却能够起到一阵见血、立杆见影的效果，帮我们解决了GC过于频繁的性能瓶颈。
+
+- TProfiler最重要的特性就是能够统计出你指定时间段内JVM的top method
+  - 这些top method极有可能就是造成JVM性能瓶颈的元凶
+  - 这是其他大多数JVM调优工具所不具备的，包括JRocket Mission Control
+  - JRocket首席开发者Marcus Hirt在其私人博客《Low Overhead Method Profilering with Java Mission Control》下的评论中层明确指出JRMC并不支持TOP方法的统计。
+
+- TProfiler下载：[网址](https://github.com/alibaba/TProfiler)
+
+### 3.8.3. Btrace
+
+### 3.8.4. YourKit
+
+### 3.8.5. JProbe
+
+### 3.8.6. Spring Insight
+
 # 4. JVM运行时参数
 
-## 4.1. JVM参数类型
+## 4.1. JVM参数选项类型
 
-## 4.2. 常用JVM参数
+### 4.1.1. 类型一：标准参数选项
+
+- 特点：比较稳定，后续版本基本不会变化，**以-开头**
+- 各种选项：运行java或者java -help可以看到所有的标准选项
+
+  ![jvm3-93.png](./image/jvm3-93.png)
+
+- 补充内容：-server与-client
+  - Hotspot JVM有两种模式，分别是server和client，分别通过-server和-client模式设置
+  - 在32位Windows系统上，默认使用Client类型的JVM。
+    - 要想使用Server模式，则机器配置至少有2个以上的CPU和2G以上的物理内存
+    - client模式适用于对内存较小的桌面应用程序，默认使用Serial串行垃圾收集器。
+  - 64位机器上只支持server模式的JVM，使用于需要大内存的应用程序，默认抵用并行垃圾收集器
+
+- 关于server和client的官网介绍：[网址](https://docs.oracle.com/javase/8/docs/technotes/guides/vm/server-class.html)
+
+### 4.1.2. 类型二：-X参数
+
+- 特点：
+  - 非标准化参数，功能还是比较稳定的
+  - 但官方说后续版本可能会变更， **以-X开头**
+
+- 各种选项：运行java -X命令可以看到所有的X选项
+
+  ```bash
+  $ java -X
+      -Xmixed           混合模式执行 (默认)
+      -Xint             仅解释模式执行
+      -Xbootclasspath:<用 ; 分隔的目录和 zip/jar 文件>
+                        设置搜索路径以引导类和资源
+      -Xbootclasspath/a:<用 ; 分隔的目录和 zip/jar 文件>
+                        附加在引导类路径末尾
+      -Xbootclasspath/p:<用 ; 分隔的目录和 zip/jar 文件>
+                        置于引导类路径之前
+      -Xdiag            显示附加诊断消息
+      -Xnoclassgc       禁用类垃圾收集
+      -Xincgc           启用增量垃圾收集
+      -Xloggc:<file>    将 GC 状态记录在文件中 (带时间戳)
+      -Xbatch           禁用后台编译
+      -Xms<size>        设置初始 Java 堆大小
+      -Xmx<size>        设置最大 Java 堆大小
+      -Xss<size>        设置 Java 线程堆栈大小
+      -Xprof            输出 cpu 配置文件数据
+      -Xfuture          启用最严格的检查, 预期将来的默认值
+      -Xrs              减少 Java/VM 对操作系统信号的使用 (请参阅文档)
+      -Xcheck:jni       对 JNI 函数执行其他检查
+      -Xshare:off       不尝试使用共享类数据
+      -Xshare:auto      在可能的情况下使用共享类数据 (默认)
+      -Xshare:on        要求使用共享类数据, 否则将失败。
+      -XshowSettings    显示所有设置并继续
+      -XshowSettings:all
+                        显示所有设置并继续
+      -XshowSettings:vm 显示所有与 vm 相关的设置并继续
+      -XshowSettings:properties
+                        显示所有属性设置并继续
+      -XshowSettings:locale
+                        显示所有与区域设置相关的设置并继续
+
+  -X 选项是非标准选项, 如有更改, 恕不另行通知。
+  ```
+
+- 部分说明:JVM的JIT编译模式相关的选项
+  - -Xint 禁用JIT，所有字节码都被解释执行，这个模式的速度是最慢的
+  - -Xcomp 所有字节码第一次使用都被编译成本地代码，然后再执行
+  - -Xmixed 混合模式，默认模式，让JIT根据程序运行的情况，有选择地将某些代码编译成本地代码
+
+- 注意： **-Xms -Xmx -Xss属于XX参数**
+  - -Xms<size> 设置初始Java堆大小，等价于-XX:InitialHeapSize
+  - -Xmx<size> 设置最大Java堆大小，等价于-XX:MaxHeapSize
+  - -Xss<size> 设置Java线程堆栈大小，等价于-XX:ThreadStackSize
+
+### 4.1.3. 类型三：-XX参数
+
+- 特点：
+  - 非标准化参数， **使用最多的参数选项**
+  - 这类选项属于实验性，不稳定， **以-XX开头**
+
+- 作用：用于开发和调试JVM
+
+- 查看所有-XX参数
+
+  ```bash
+  -XX:+PrintFlagsFinal
+  ```
+  - 输出所有参数的名称和默认值
+  - 默认不包括Diagnositc和Experiment的参数
+  - 可以配合`-XX:+UnlockDiagnosticVMOptions`和`-XX:UnlockExperimentVMOptions`使用
+
+todo
+
+- **分类**：
+  - Boolean类型格式
+    - `-XX:+<option>`表示启动option属性
+    - `-XX:-<option>`表示禁用option属性
+  - 非Boolean类型格式(key-value类型)
+    - 子类型1：数值型格式：`-XX:<option>=<number>`
+    - 子类型2：非数值型格式：`-XX:<name>=<string>`
+
+- 分类示例
+
+  ```bash
+  # Boolean类型格式
+  -XX:+UseParallelGC			# 选择垃圾收集器为并行收集器
+  -XX:+UseG1GC				# 表示启用G1收集器
+  -XX:+UseAdaptiveSizePolicy	# 自动选择年轻代区大小和响相应的Survivor区比例
+  
+  # 非Boolean类型格式(key-value类型)
+  # 子类型1：数值型格式 -XX:<option>=<number>
+  # number表示数值，可带上单位：(兆：'m','M'),(KB：'k', 'K'), (GB：'g','G')
+  -XX:NewSize=1024m			# 表示设置新生代初始大小为1024兆
+  -XX:MaxGCPauseMills=500		# 表示设置GC停顿时间：500毫秒
+  -XX:GCTimeRatio=19			# 表示设置吞吐量
+  -XX:NewRatio=2				# 表示老年代和新生代的比例为2
+
+  # 子类型2：非数值型格式 -XX:<option>=<string>
+  -XX:HeapDumpPath=/usr/local/heapdump.hprof		# 用于指定heap转存文件的存储路径
+  ```
+
+## 4.2. 添加JVM参数选项
+
+### 4.2.1. eclipse
+
+### 4.2.2. IDEA
+
+### 4.2.3. 运行jar包
+
+```bash
+java -Xms50m -Xmx50m -XX:+PrintGCDetails -XX:+PrintGCTimeStamps -jar demo.jar
+```
+
+### 4.2.4. 通过Tomcat运行war包
+
+- Linux系统下可以在tomcat/bin/catalina.sh中添加如下配置：`JAVA_OPTS="-Xms512M -Xmx1024M"`
+- Windows系统下在catalina.bat中添加类似如下配置：`set "JAVA_OPTS=-Xms512M -Xmx1024M"`
+
+### 4.2.5. 程序运行过程中
+
+- 使用`jinfo -flag <name>=<value> <pid>`设置非Boolean类型参数
+- 使用`jinfo -flag [+|-]<name> <pid>`设置Boolean类型参数
+
+## 4.3. 常用的JVM参数选项
+
+> [命令参数官方网址](https://docs.oracle.com/javase/8/docs/technotes/tools/unix/java.html)
+
+### 4.3.1. 打印设置的XX选项及值
+
+- -XX:+PrintCommandLineFlags:可以让在程序运行前打印出用户手动设置或者JVM自动设置的XX选项
+- -XX:+PrintFlagslnitial:表示打印出所有XX选项的默认值
+- -XX:+PrintFlagsFinal:表示打印出XX选项在运行程序时生效的值
+- -XX:+PrintVMOptions: 打印JVM的参数
+
+### 4.3.2. 堆、栈、方法区等内存大小设置
+
+- 栈
+  - -Xss128k
+    - 置每个线程的栈大小为128k
+    - 等价于 -XX:ThreadStackSize=128k
+- 堆内存
+  - -Xms3550m 
+    - 等价于-XX:InitialHeapSize,设置JVM初始堆内存为3550M
+  - -Xmx3550m
+    - 等价于-XX:MaxHeapSize,设置JVM最大堆内存为3550M
+  - Xmn2g
+    - 设置年轻代大小为2G
+    - 官方推荐配置为整个堆大小的3/8
+  - -XXNewsize=1024m
+    - 设置年轻代初始值为1024M
+  - -XX:MaxNewSize=1024m
+    - 设置年轻代最大值为1024M
+  - -XX:SurvivorRatio=8
+    - 设置年轻代中Eden区与一个Survivor区的比值，默认为8
+  - -XX:+UseAdaptiveSizePolicy
+    - 自动选择各区大小比例
+  - -XX:NewRatio=4 
+    - 设置老年代与年轻代（包括1个Eden和2个Survivor区）的比值
+  - -XX:PretenureSizeThreadshold=1024 
+    - 设置让大于此阅值的对象直接分配在老年代，单位为字节
+    - 只对Serial、ParNew收集器有效
+  - -XX:MaxTenuringThreshod=15
+    - 默认值为15
+    - 新生代每次MinorGC后，还存活的对象年龄+1，当年龄大于这个值的时候就进入老年代
+  - -XX:+PrintTenuringDistribution 
+    - 让JVM在每次MinorGC后打印出当前使用的Survivor中对象的年龄分布
+  - -XX:TargetSurvivorRatio:表示MinorGC结束后Survivor区域中占用空间的期望比例
+- 方法区
+  - 永久代
+    - -XX:PermSize=256m
+      - 设置永久代初始值为256M
+        - -XX:MaxPermSize=256m
+        - 设置永久代最大值为256M
+  - 元空间
+    - -XX:MetaspaceSize
+      - 初始空间大小
+    - -XX:MaxMetaspaceSize:
+      - 最大空间，默认没有限制
+    - -XX:+UseCompressedOops:
+      - 压缩对象指针
+    - -XX:+UseCompressedClassPointers
+      - 压缩类指针c
+    - -XX:CompressedClassSpaceSize
+      - 设置Class Metaspace的大小，默认1G
+
+- 直接内存
+  - -XX:MaxDirectMemorysize:
+    - 指定DirectMemory容量，若未指定，则默认与Java维最大值一样
+
+---
+
+- 注意点：
+  - 虽然默认参数`-XX:SurvivorRatio=8`，但是如果不显式设置，实际上`Eden : S0 : S1 = 6 : 1 : 1`
+  - 默认情况下，`-XX:+UseAdaptivePolicy`是开启的
+  - 需要显式设置`-XX:SurvivorRatio=8`，才能`Eden : S0 : S1 = 8 : 1 : 1`
+
+### 4.3.3. OutofMemory相关的选项
+
+- -XX:+HeapDumpOnOutOfMemoryError
+  - 表示在内存出现OOM的时候，把Heap转存（Dump)到文件以便后续分析
+- -XX:+HeapDumpBeforeFullGC
+  - 表示在出现FullGC之前，生成Heap转储文件
+- `-XX:HeapDumpPath=<path>`
+  - 指定heap转存文件的存储路径
+- -XX:OnOutOfMemoryError
+  - 指定一个可行性程序或者脚本的路径，当发生OOM的时候，去执行这个脚本8946
+
+- 对OnOutOfMemoryError的运维处理
+  - 以部署在linux系统/opt/Server目录下的Server.jar为例
+  - （1）在run.sh启动脚本中添加jvm参数
+
+    ```bash
+    -XX:OnOutOfMemoryError=/opt/Server/restart.sh
+    ```
+  - （2）restart.sh脚本
+
+    ```bash
+    #!/bin/bash
+    # linux环境
+    pid=$(pf -ef | grep Server.jar | awk '{if($8=="java"){print $2}}')
+    kill -9 $pid
+    cd /opt/Server/;sh run.sh
+    ```
+
+    ```bash
+    # windows环境
+    echo off
+    wmic process where Name='java.exe' delete
+    cd D:\Server
+    start run.bat
+    ```
+
+### 4.3.4. 垃圾收集器相关选项
+
+#### 4.3.4.1. 垃圾回收器复习
+
+- 7款经典垃圾收集器与垃圾分代之间的关系
+
+  ![jvm3-94.png](./image/jvm3-94.png)
+
+- 垃圾收集器的组合关系
+
+  ![jvm3-95.png](./image/jvm3-95.png)
+
+  - 该图已经更新到JKD14
+    - 如果把图中的虚线均看做实线，这是JDK8（不包含JDK8）之前垃圾收集器的组合关系
+    - 对CMS和MSC之间的线是指如果CMS失败，启动MSC（MSC相当于后备方案）
+    - 在JDK8中废弃了两条**红色虚线**的组合（JEP 173），在JDK9中这两根红色虚线做了移除（JEP 214）。
+    - 在JDK14中，弃用了**绿色虚线**的组合（JEP 366）。
+    - 在JDK14中，删除了**青色虚线框**中的CMS垃圾回收器（JEP 363）。
+  - JDK8中默认的垃圾回收器是：Parallel Scavenge GC + Parallel Old GC
+  - 为什么Parallel Scanvenge GC不能和CMS搭配使用？
+    - Parallel Scanvenge GC底层用的框架和其他不同，不兼容。
+
+#### 4.3.4.2. 查看默认垃圾收集器
+
+- jvm参数
+
+  ```bash
+  -XX:+PrintCommandLineFlags  # 查看命令行相关参数(包含使用的垃圾收集器)
+  ```
+
+- jinfo
+
+  ```bash
+  jinfo -flag 相关垃圾收集器参数 进程ID
+  ```
+
+#### 4.3.4.3. 垃圾回收器相关参数
+
+- Serial回收器
+  - -XX:+UseSerialGC
+    - Serial收集器作为HotSpot中Client模式下的默认新生代垃圾收集器
+    - Serial Old是运行在Client模式下默认的老年代垃圾回收器。
+    - 指定年轻代和老年代都是用串行收集器。等价于新生代使用Serial GC，老年代用Serial Old GC。可以获得最高的单线程收集效率。
+
+- ParNew回收器
+  - -XX:UseParNewGC
+    - 手动指定使用ParNew收集器执行内存回收任务。它表示年轻代使用并行收集器，不影响老年代。
+  - -XX:ParallelGCThreads=N
+    - 限制线程数量，默认开启和CPU数据相同的线程数。
+
+- Parallel回收器（吞吐量优先）
+  - -XX:+UseParallelGC
+    - 手动指定新生代用Parallel并行收集器执行内存回收任务。
+    - 默认jdk8是开启的。
+    -  和UseParallelOldGC **相互激活** 
+  - -XX:UseParallelOldGC
+    - 手动指定老年代使用并行会收收集器。
+    - 默认jdk8是开启的。
+    - 和UseParallelGC **相互激活** 
+  - -XX:ParallelGCThreads
+    - 设置新生代并行收集器的线程数，一般的，最好与CPU数量相等，以避免过多的线程影响垃圾收集的性能。
+    - 默认情况下，当CPU数量小于等于8个，ParallelGCThreads的值等于CPU数量。
+    - 当CPU数量大于8个，ParallelGCThreads的值等于3+[5*CPU_count/8]。
+  - -XX:MaxGCPauseMillis
+    - 设计垃圾收集器的最大停顿时间（即STW的时间）。单位是毫秒。
+    - 为了尽可能把停顿时间控制在MaxGCPauseMillis以内，收集器在工作时会调整Java堆大小或者其他一些参数。
+    - 对于用户来说，停顿时间越短体验越好
+    - 但是在服务器端，我们注重高并发，整体的吞吐量。所以服务器端适合Parallel，进行控制。
+    - **该参数使用需谨慎。**
+  - -XX:GCTimeRatio
+    - 垃圾收集时间占总时间的比例（=1/（N+1））。用于衡量吞吐量的大小。
+    - 取值范围（0，100）。默认99，也就是垃圾回收时间不超过1%。
+    - 与前一个-XX:MaxGCPauseMillis参数有一定矛盾性。暂停时间越短，Ratio参数就越容易超过设定的比例。
+  - -XX:+UseAdaptiveSizePolicy
+    - 设置Parallel Scavenge收集器具有 自适应调节策略
+    - 在这种模式下，新生代的大小，Eden和Survivor的比例，晋升老年代的对象年龄等参数会被自动调整，以达到在堆大小、吞吐量和停顿时间之间的平衡点。
+    - 在手动调优比较困难的场合，可以直接使用这种自适应的方式，仅指定虚拟机的最大堆、目标吞吐量（GCTimeRatio）和停顿时间（MaxGCPauseMillis），让虚拟机自己完成调优工作。
+
+- CMS回收器（低延迟）
+  - -XX:UseConcMarkSweepGC
+    - 手动指定使用CMS收集器执行内存回收任务。
+    - 开启该参数后会自动将-XX:+UseParNewGC打开。即ParNew（Young区用）+CMS（Old区用）+Serial Old的组合。
+  - -XX:CMSInitiatingOccupanyFraction
+    - 设置堆内存使用率的阈值，一旦达到阈值，便开始回收。
+    - JDK5及以前的版本的默认值为68，即当老年代的利用率达到68%时，会执行一次CMS回收。 **JDK6及以上版本默认值为92%** 
+    - 如果内存增长缓慢，这可以设置一个较大的值，大的阈值可以有效降低CMS的出发频率，减少老年代回收的次数可以较为明显地改善应用程序性能。
+    - 反之，如果内存使用率增长很快，则应该降低这个阈值，以避免频繁触发老年代串行收集器。因此**通过该选项可以有效降低Full GC的执行次数**。
+  - -XX:UseCMSCompactAtFullCollection
+    - 用于指定在执行完Full GC后对内存进行压缩整理，以此避免内存碎片的产生
+    - 不过由于内存压缩整理过程无法并发执行，所带来的问题就是停顿时间变得更长了。
+  - -XX:CMSFullGCsBeforeCompaction
+    - 设置在执行多少次Full GC后对内存空间进行压缩整理。
+
+  - -XX:ParallelCMSThreadse
+    - 设置CMS的线程数量。
+    - CMS默认启用的线程数是（ParallelGCThreads+3）/4
+    - ParallelGCThreads是新生代并行收集器的线程数，当CPU资源比较紧张时，受到CMS收集器的影响，应用程序的性能在垃圾回收阶段可能会非常糟糕。
+
+- 补充参数
+  - -XX:ConcGCThreads
+    - 设置并发垃圾收集的线程数
+    - 默认该值是基于ParallelGCThreads计算出来的
+  - -XX:+UseCMSInitiatingOccupancyOnly
+    - 是否动态可调，用这个参数可以使CMS一直按CMSInitiatingoccupancyFraction设定的值启动
+  - -XX:+CMSScavengeBeforeRemark
+    - 强制hotspot虚拟机在cms remark阶段之前做一次minor gc
+    - 用于提高remark阶段的速度；
+  - -XX:+CMSClassUnloadingEnable
+    - 如果有的话，启用回收Perm区（JDK8之前）
+  - -XX:+CMSParallelInitialEnabled
+    - 用于开启CMS initial-mark阶段采用多线程的方式进行标记
+    - 用于提高标记速度，在Java8开始已经默认开启；
+  - -XX:+CMSParallelRemarkEnabled
+    - 用户开启CMS remark阶段采用多线程的方式进行重新标记
+    - 默认开启；
+  - -XX:+ExplicitGCInvokesConcurrent、-XX:+ExplicitGCInvokesConcurrentAndUnloadsclasses
+    - 这两个参数用户指定hotspot虚拟在执行System.gc()时使用CMS周期；
+  - -XX:+CMSPrecleaningEnabled
+    - 指定CMS是否需要进行Pre cleaning这个阶段
+
+- 特殊说明
+
+  ![在这里插入图片描述](https://img-blog.csdnimg.cn/2021021623272678.png?x-oss-process=image/watermark,type_ZmFuZ3poZW5naGVpdGk,shadow_10,text_aHR0cHM6Ly9ibG9nLmNzZG4ubmV0L3dlaXhpbl80MjYzODk0Ng==,size_16,color_FFFFFF,t_70#pic_center)
+
+> G1回收器
+
+- 参数设置
+
+  - **-XX:UseG1GC** 手动指定使用G1收集器执行内存回收任务。
+  - **-XX:G1HeapRegionSize** 设置每个Region的大小。值是2的幂，范围是1MB到32MB之间，目标是根据最小的Java堆大小划分出2048个区域。Region默认是堆内存的1/2000。
+  - **-XX:MaxGCPauseMillis** 设置期望达到的最大GC停顿时间指标（JVM会尽力实现，但不保证达到）。默认是200ms。
+  - **-XX:ParallelGCThread** 设置STW时GC线程数的值。最多设置为8。
+  - **-XX:ConcGCThreads** 设置并发标记的线程数，建议将该参数设置为并行垃圾回收线程（ParallelGCThreads）的1/4左右。
+  - **-XX:InitiatingHeapOccupancyPercent** 设置触发并发GC周期的Java堆占用阈值。超过此值，就触发GC。默认是45.
+  - **-XX:G1NewSizePercent、-XX:G1MaxNewSizePercent** 新生代占整个堆内存的最小百分比（默认5%）、最大百分比（默认60%）
+  - **-XX:G1ReservePercent** 保留内存区域，防止to space（Survivor中的to区）溢出
+
+- Mixed GC调优参数
+
+  ![在这里插入图片描述](https://img-blog.csdnimg.cn/20210216232740389.png?x-oss-process=image/watermark,type_ZmFuZ3poZW5naGVpdGk,shadow_10,text_aHR0cHM6Ly9ibG9nLmNzZG4ubmV0L3dlaXhpbl80MjYzODk0Ng==,size_16,color_FFFFFF,t_70#pic_center)
+
+> 怎么选择垃圾回收器
+
+Java垃圾回收器的配置对于JVM优化来说是一个很重要的选择，选择合适的垃圾回收器可以让JVM的性能有一个很大的提升。
+
+1. 优先调整堆的大小让JVM自适应完成
+2. 如果内存小于100MB，使用串行收集器
+3. 如果单核、单机程序，并且没有停顿时间的要求，串行收集器
+4. 如果是多CPU、需要高吞吐量、允许停顿时间超过1秒，选择并行或者JVM自行选择
+5. 如果是多CPU、追求地停顿时间，需要快速响应（比如延迟不能超高1秒，如互联网应用），使用并发收集器；官方推荐G1，性能高。**现在互联网的项目，基本都是使用G1**。
+
+- 最后明确一个观点
+  - 没有最好的收集器，更没有万能的收集器；调优永远针对特定场景、特定需求，不存在一劳永逸的收集器。
+
+### 4.3.5. GC日志参数
+
+- 常用参数
+  - -verbose:gc
+    - 输出gc日志信息，默认输出到标准输出
+    - 可以独立使用
+  - -XX:+PrintGC
+    - 等同于-verbose:gc，表示打开简化的gc日志
+    - 可以独立使用
+  - -XX:+PrintGCDetails
+    - 在发生垃圾回收时打印内存回收详细的日击， 并在进程推出时输出当前内存各区域的分配情况
+    - 可以独立使用
+  - -XX:+PrintGCTimestamps
+    - 输出GC发生时的时间戳
+    - 不可以独立使用，需要配合-XX:+PrintGCDetails使用
+  - -XX:+PrintGCDateStamps
+    - 输出GC发生时的时间戳（以日期的形式，如2013-05-04T21:53:59.234+0800）
+    - 不可以独立使用，需要配合-XX:+PrintGCDetails使用
+  - -XX:+PrintHeapAtGC
+    - 每一次GC前和GC后，都打印堆信息
+    - 可以独立使用
+  - `-Xloggc:<file>`
+    - 把GC日志写入到一个文件中去，而不是打印到标准输出中
+
+- 其他参数
+  - -XX:+TraceClassLoading
+    - 监控类的加载
+  - -XX:+PrintGCApplicationStoppedTime
+    - 打印GC时线程的停顿时间
+  - -XX:+PrintGCApplicationConcurrentTime
+    - 垃圾收集之前打印出应用未中断的执行时间
+  - -XX:+PrintReferenceGC
+    - 记录回收了多少种不同引用类型的引用
+  - -XX:+PrintTenuringDistribution
+    - 让JVM在每次MinorGC后打印出当前使用的Survivor中对象的年龄分布
+  - -XX:+UseGCLogFileRotation
+    - 启用GC日志文件的自动转储
+  - -XX:NumberOfGClogFiles=1
+    - GC日志文件的循环数目
+  - -XX:GCLogFileSize=1M
+    - 控制GC日志文件的大小
+
+### 4.3.6. 其他参数
+
+- -XX:+DisableExplicitGC
+  - 禁止hotspot执行System.gc(),默认禁用
+- `-XX:ReservedCodeCacheSize=<n>[g|m]k]、-XX:InitialCodeCacheSize=<n>[g|m]k]`
+  - 指定代码缓存的大小
+- -XX:+UseCodeCacheFlushing
+  - 使用该参数让jvm放弃一些被编译的代码，
+  - 避免代码缓存被占满时JVM切换到interpreted-only的情况
+- -XX:+DoEscapeAnalysis
+  - 开启逃逸分析
+- -XX:+UseBiasedLocking
+  - 开启偏向锁
+- -XX:+UseLargePages
+  - 开启使用大页面
+- -XX:+UseTLAB
+  - 使用TLAB,默认打开
+- -XX:+PrintTLAB
+  - 打印TLAB的使用情况
+- -XX:TLABSize 
+  - 设置TLAB大小
+
+## 4.4. 通过Java代码获取JVM参数
+
+- Java提供了java.lang.management包用于监视和管理Java虚拟机和Java运行时中的其他组件
+- 它允许本地和远程监控和管理运行Java虚拟机
+- 其中ManagementFactory这个类还是挺常用的
+- 另外还有Runtime类也可以获取一些内存、CPU核数等相关数据。
+- 通过这些api可以监控我们的应用服务器堆内存的使用情况，设置一些阈值进行报警处理。
+
+```java
+/**
+ * 监控我们的应用服务器的堆内存使用情况，设置一些阈值进行报警等处理
+ */
+public class MemoryMonitor {
+    public static void main(String[] args) {
+        MemoryMXBean memorymbean = ManagementFactory.getMemoryMXBean();
+        MemoryUsage usage = memorymbean.getHeapMemoryUsage();
+        System.out.println("INIT HEAP: " + usage.getInit() / 1024 / 1024 + "m");
+        System.out.println("MAX HEAP: " + usage.getMax() / 1024 / 1024 + "m");
+        System.out.println("USE HEAP: " + usage.getUsed() / 1024 / 1024 + "m");
+        System.out.println("\nFull Information:");
+        System.out.println("Heap Memory Usage: " + memorymbean.getHeapMemoryUsage());
+        System.out.println("Non-Heap Memory Usage: " + memorymbean.getNonHeapMemoryUsage());
+
+        System.out.println("=======================通过java来获取相关系统状态============================ ");
+        System.out.println("当前堆内存大小totalMemory " + (int) Runtime.getRuntime().totalMemory() / 1024 / 1024 + "m");// 当前堆内存大小
+        System.out.println("空闲堆内存大小freeMemory " + (int) Runtime.getRuntime().freeMemory() / 1024 / 1024 + "m");// 空闲堆内存大小
+        System.out.println("最大可用总堆内存maxMemory " + Runtime.getRuntime().maxMemory() / 1024 / 1024 + "m");// 最大可用总堆内存大小
+    }
+}
+/*
+ INIT HEAP: 256m
+ MAX HEAP: 3614m
+ USE HEAP: 5m
+ 
+ Full Information:
+ Heap Memory Usage: init = 268435456(262144K) used = 5383480(5257K) committed = 257425408(251392K) max = 3790077952(3701248K)
+ Non-Heap Memory Usage: init = 2555904(2496K) used = 4789360(4677K) committed = 8060928(7872K) max = -1(-1K)
+ =======================通过java来获取相关系统状态============================ 
+ 当前堆内存大小totalMemory 245m
+ 空闲堆内存大小freeMemory 240m
+ 最大可用总堆内存maxMemory 3614m
+ */
+```
 
 # 5. GC日志分析
+
+## 5.1. GC日志参数
+
+见上节
+
+## 5.2. GC日志格式
+
+### 5.2.1. GC分类
+
+> 针对HotSpot VM的实现，它里面的GC按照回收区域又可分为辆大众类型：一种是部分收集（Partial GC），一种是整堆收集（Full GC）
+
+- 部分收集：不是完整收集整个Java堆的垃圾收集。其中又分为
+  - 新生代收集（Minor GC / Young GC）：只有新生代（Eden\S0,S1）的垃圾收集
+  - 老年代收集（Major GC / Old GC）：只有老年代的垃圾收集。
+    - 目前，只有CMS GC会有单独收集老年代的行为。
+    - **注意，很多时候Major GC会和Full GC混淆使用，需要具体分辨是老年代还是整堆回收。**
+  - 混合收集（Mixed GC）：收集整个新生代以及部分老年代的垃圾收集
+    - 目前，只有G1 GC会有这种行为
+- 整堆收集（Full GC）：收集整个Java堆和方法区的垃圾收集。
+
+------
+
+- 哪些情况会出发Full GC？
+  - 老年代空间不足
+  - 方法区空间不足
+  - 显式调用System.gc()
+  - Minor GC进入老年代的数据的平均大小 大于 老年代的可用内存
+  - 大对象直接进入老年代，而老年代的可用空间不足
+
+### 5.2.2. GC日志分类
+
+- Minor GC
+
+  ![jvm3-96.png](./image/jvm3-96.png)
+
+- Full GC
+
+  ![jvm3-97.png](./image/jvm3-97.png)
+
+### 5.2.3. GC日志结构剖析
+
+#### 垃圾收集器
+
+- 使用Serial收集器在新生代的名字是Default New Generation，因此显示的是"[DefNew"
+- 使用ParNew收集器在新生代的名字会变成"[ParNew"，意思是：“Parallel New Generation”
+- 使用Parallel Scavenage收集器在新生代的名字是"[PSYoungGen"，这里的JDK1.7使用的就是PSYoungGEN
+- 使用Parallel Old Generation收集器在老年代的名字是"[ParOldGen"
+- 使用G1收集器的话，会显示"garbage-fisrt heap"
+
+---
+
+**Allocation Failure**：表明本次引起GC的原因是因为在**新生代中没有足够的空间能够存储新的数据了**
+
+#### GC前后情况
+
+- 通过图示，我们可以发现GC日志的规律一般都是：GC前内存占用---->GC后内存占用（该区域内存总大小）
+
+  ```bash
+  [PSYoungGen:5986K->696K(8704K)]5986K->704K(9216K)
+  ```
+
+  中括号内：GC回收前新生代占用内存大小，回收后大小（新生代堆总大小）
+
+  中括号外：GC回收前新生代和老年代占用内存大小，回收后大小（新生代和老年代总大小）
+
+#### GC时间
+
+> GC日志中有三个时间：user，sys和real
+
+- user：
+  - 进程执行用户态代码（核心之外）所使用的时间
+  - **这是执行此进程所使用的实际CPU时间** ，其他进程和此进程阻塞的时间并不包括在内
+  - 在垃圾收集的情况下，表示GC线程执行所使用的CPU总时间。
+- sys：
+  - 进程在内核态消耗的CPU时间
+  - 即 **在内核执行系统调用或等待系统事件所使用的的CPU时间** 。
+- real：
+  - 程序从开始到结束所用的时钟时间
+  - 这个时间包括其他进程使用的时间片和进程阻塞的时间（比如等待I/O完成）
+  - 对于并行gc，这个数字应该接近（用户时间+系统时间）/ 垃圾收集器使用的线程数。
+
+---
+
+- 注意：
+  - 由于多核的原因，一般的GC事件中，real time是小于sys+user time的
+  - 因为一般是多个线程并发去做GC，所以rea time是要小于sys+user time的
+  - 如果real>sys+user time的话，则代码可能存在下列问题：IO负载非常重或者CPU不够用。
+
+### 5.2.4. Minor GC日志解析示例
+
+```bash
+2020-11-20T17:19:43.265-0800:0.822:[GC (ALLOCATION FAILURE)[PSYOUNGGEN:76800K->8843k(89600K)]76800K->8449K(29400K), 0.008371 SECS] [TIMES:USER=0.02 SYS=0.01, REAL=0.01 SECS]
+```
+
+![jvm3-98.png](./image/jvm3-98.png)
+
+### 5.2.5. Full GC日志解析示例
+
+```bash
+2020-11-20T17:19:43.794-0800:1.352:[FULL GC (METADATA GC THREADHOLD)[PSYOUNGGEN:10082K->0K(89600K)][PAROLDGEN]:32K->9638K(204800K)]10114K->9638K(294400K),[METASPACE:20158K->20156K(1067008K)], 0.0285388 SECS][TIMES:USER=0.11 SYS=0.00, REAL=0.03 SECS]
+```
+
+![jvm3-99.png](./image/jvm3-99.png)
+
+## 5.3. GC日志分析工具
+
+### 存储到文件
+
+- 如果想把GC日志存到文件的话，是下面这个参数：
+
+  ```bash
+  -Xloggc:/path/to/gc.log
+  ```
+
+### 5.3.1. GCEasy
+
+- GCEasy-------一款超好用的在线分析GC日志的网站
+- GCEasy可以通过GC日志分析进行内存泄露检测、GC展厅原因分析、JVM配置建议优化等功能，而且是可以免费使用的（有一些服务是收费的）
+- [官方网站](https://gceasy.io/)
+
+  ![jvm3-100.png](./image/jvm3-100.png)
+
+### 5.3.2. GCViewer
+
+- 这是一款离线版的GC日志分析工具
+- GCViewer是一个免费的、开源的分析小工具，可用于可视化查看由SUN/Oracle，IBM，HP和BEA Java虚拟机产生的垃圾收集器的日志。
+- GCViewer可用于可视化Java VM选项-verbose:gc 和.NET生成的数据-Xloggc:<file>。它还计算与垃圾回收相关的性能指标（吞吐量，累积的暂停，最长的暂停等）。当通过更改世代大小或设置初始堆大小来调整特定应用程序的垃圾回收时，此功能非常有用。
+- 下载GCViewer工具
+  - 源码下载：[网址](https://github.com/chewiebug/GCViewer)
+  - 运行版本下载：[网址](https://github.com/chewiebug/GCViewer/wiki/Changelog)
+- 启动：运行`java -jar gcviewer-1.3x.jar`
+  > 需要java 1.8
+
+### 5.3.3. 其他工具
+
+![jvm3-101.png](./image/jvm3-101.png)
 
 # 6. 面试题
 
@@ -2293,6 +3272,6 @@ class Bean {
   - 线上生产系统 OOM 如何监控及定位与解决？
   - 高并发系统如何基于 G1 垃圾回收器优化性能？
 
-# 参考资料
+# 7. 参考资料
 
 - [ ][JVM调优的几种场景](https://mp.weixin.qq.com/s/VAvqirv2c22viJNZ92WiNg)
